# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./tradingProfile";
 export * from "./signalHistory";
 export * from "./brokerSession";
+export * from "./portfolioPosition";
